--- a/Serverless/serverless.yml
+++ b/Serverless/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: awsafp-lessons
+service: awsafp-lessons-2
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -73,7 +73,7 @@ functions:
     handler: get.getAll
     events:
       - http:
-          path: /api/get-all
+          path: /api/get-ticket
           method: get
 
   insertTicket:
@@ -83,6 +83,19 @@ functions:
           path: /api/insert-ticket
           method: post
 
+  deleteTicket:
+    handler: delete.deleteTicket
+    events:
+      - http:
+          path: /api/delete-ticket
+          method: delete
+          
+  updateTicket:
+    handler: update.updateTicket
+    events:
+      - http:
+          path: /api/update-ticket
+          method: put
 
 
 #    The following are a few example events you can configure
